Padding for footer

--- a/CSS Legend Sound.css
+++ b/CSS Legend Sound.css
@@ -8,7 +8,7 @@
 }
 
 body {
-  background-color: #202020;  
+  background-color: #202020;
     font-size: 16px;
 }
 
@@ -38,7 +38,7 @@ a {
     position: fixed;
   height: 100%;
   width: 100%;
-    margin: auto; 
+    margin: auto;
     z-index: -1;
 }
 
@@ -68,7 +68,7 @@ h2 {
 	-webkit-user-select: none;
 	-moz-user-select: none;
     user-select: none;
-	
+
 }
 
 .scroll {
@@ -118,26 +118,26 @@ p {
 	-webkit-user-select: none;
 	-moz-user-select: none;
     user-select: none;
- 
+
 }
 
 .service-img {
     display: block;
-    margin: 0 auto;   
-    
-} 
+    margin: 0 auto;
+
+}
 
 h5 {
     font-family: oswald, sans-serif;
     font-weight: 400;
     font-size: 2em;
     color: #fff;
-    text-align: center;   
+    text-align: center;
     margin: 0 auto;
 	-webkit-user-select: none;
 	-moz-user-select: none;
     user-select: none;
-} 
+}
 
 .column-left {
     float: left;
@@ -168,7 +168,7 @@ h5 {
     background-size: cover;
     background-attachment: fixed;
     height: 190%;
-    width: 100%;   
+    width: 100%;
     background-position: center;
     margin-bottom: 0px;
 	-webkit-user-select: none;
@@ -197,7 +197,7 @@ h4 {
     margin: 0;
     height: 140%;
     background-color: rgba(46, 86, 86, .7);
-    
+
 }
 
 #containing-block {
@@ -258,13 +258,14 @@ hr {
     width: 40%;
     margin: 0 auto;
     margin-bottom: 2em;
- 
+
 }
 
 #foot-logo {
 	width: 75%;
 	margin-left: 12.5%;
 	padding-top: 25%;
+  padding-bottom: 60px;
 }
 
 @media only screen and (max-width : 800px) and (orientation : landscape) {
@@ -276,23 +277,23 @@ hr {
     h1 {
         font-size: 8em;
     }
-    
+
 	#header {
 		Height: 60em;
 	}
 	#about {
 		margin:0;
 		height: 57em;
-		
+
 	}
-	
+
 	#my-name-is {
 		font-size: 1.25em;
 	}
-	
+
 	p {
 		margin: 0 1em
-	}		
+	}
 }
 
 @media only screen and (max-width: 667px) {
@@ -316,14 +317,14 @@ hr {
     	padding-right: 1em;
 		padding-bottom: 1.5em;
 	}
-	
+
 	#services {
 		height: 74em;
 	}
 		#containing-block {
 		display: block;
 	}
-	
+
 	.container-video {
 		display: block;
 		padding-bottom: 56.25%;
@@ -335,28 +336,27 @@ hr {
         font-size: 10px;
         width: 100%;
     }
-	
+
 	#services {
 		height: 85em;
 	}
-	
+
 	#featured {
-		height: 80em;	 
+		height: 80em;
 	}
     h1 {
         font-size: 10em;
     }
-    
+
     h4 {
         font-size: 3.5em;
     }
-    
+
     #services {
         height: 180%;
     }
-    
+
     #testimonials {
         height: 290%;
     }
 }
-
